CDPD-58365: [frontend] fix input overflow issue in AiAssistBar
(cherry picked from commit 01d10642e3d0a5905acdb1ab22cc5d15637b4dfb)
(cherry picked from commit da5e3cdf04c7cecf52fb6e860e3ceabd9f76a48d)

--- a/desktop/core/src/desktop/js/apps/editor/components/AiAssist/AiAssistToolbar/AiAssistToolbarInput.scss
+++ b/desktop/core/src/desktop/js/apps/editor/components/AiAssist/AiAssistToolbar/AiAssistToolbarInput.scss
@@ -61,8 +61,9 @@ $semi-transparent-background: rgba(237, 247, 255, 0.5);
   // Used as a reference element for measuring the width of the input
   // which is needed to create a growing input field.
   .hue-ai-assist-toolbar-input__size-reference-element {
-    visibility: hidden;
-    white-space: pre-line;
+    // visibility: hidden;
+    white-space: pre-wrap;
+    overflow-wrap: break-all;
     border: 1px dotted red;
     color: red;
     line-height: $line-height;
